--- a/.github/workflows/release-artifacts.yml
+++ b/.github/workflows/release-artifacts.yml
@@ -48,7 +48,7 @@ jobs:
         shell: bash
         run: |
           choco install openssl
-          export OPENSSL_DIR="C:\Program Files\OpenSSL-Win64"
+          refreshenv
           choco install protoc
           export PROTOC="C:\ProgramData\chocolatey\lib\protoc\tools\bin\protoc.exe"
           source /tmp/env.sh
