--- a/.github/workflows/release-artifacts.yml
+++ b/.github/workflows/release-artifacts.yml
@@ -48,6 +48,17 @@ jobs:
         shell: bash
         run: |
           choco install openssl
+          if [[ -d "C:\Program Files\OpenSSL" ]]; then
+            echo "OPENSSL_DIR: C:\Program Files\OpenSSL"
+            export OPENSSL_DIR="C:\Program Files\OpenSSL"
+          elif [[ -d "C:\Program Files\OpenSSL-Win64" ]]; then
+            echo "OPENSSL_DIR: C:\Program Files\OpenSSL-Win64"
+            export OPENSSL_DIR="C:\Program Files\OpenSSL-Win64"
+          else
+            echo "can't determine OPENSSL_DIR"
+            exit 1
+          fi
+
           export OPENSSL_DIR="C:\Program Files\OpenSSL"
           choco install protoc
           export PROTOC="C:\ProgramData\chocolatey\lib\protoc\tools\bin\protoc.exe"
